--- a/er-server/Cargo.toml
+++ b/er-server/Cargo.toml
@@ -13,3 +13,4 @@ serde_json = "1.0"
 tokio = { version = "1.36.0",  features = ["full"] }
 tower = { version = "0.4", features = ["util"] }
 http-body-util = "0.1.0"
+chrono = "0.4.34"
