--- a/er-server/Cargo.toml
+++ b/er-server/Cargo.toml
@@ -17,3 +17,5 @@ tokio = { version = "1.36.0",  features = ["full"] }
 tower = { version = "0.4", features = ["util"] }
 http-body-util = "0.1.0"
 chrono = "0.4.34"
+log = "0.4.21"
+env_logger = "0.11.3"
