--- a/.github/workflows/test_server.yaml
+++ b/.github/workflows/test_server.yaml
@@ -4,9 +4,13 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'er-server/*'
   pull_request:
     branches:
       - main
+    paths:
+      - 'er-server/*'
 
 jobs:
   test:
