--- a/er-client/package.json
+++ b/er-client/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@picocss/pico": "^2.0.6",
+    "geolocation-utils": "^1.2.5",
     "pinia": "^2.3.1",
     "sass": "^1.83.4",
     "vue": "^3.5.13"
