--- a/er-client/package.json
+++ b/er-client/package.json
@@ -11,7 +11,8 @@
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
-    "test": "vitest"
+    "test": "vitest",
+    "unit-test": "vitest run"
   },
   "dependencies": {
     "@picocss/pico": "^2.0.6",
