Add workflow to manual github pages deploy

--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -28,3 +28,7 @@ jobs:
       run: npm run unit-test
       working-directory: er-client
 
+    - name: Lint
+      run: npm run lint
+      working-directory: er-client
+
