Add workflow to manual github pages deploy

--- a/.github/workflows/deploy_client.yaml
+++ b/.github/workflows/deploy_client.yaml
@@ -1,10 +1,6 @@
 name: Deploy static content to Github Pages
 
 on:
-
-  push:
-    branches:
-    - main
   
   # empty dispatch means manual dispatch
   workflow_dispatch:
@@ -35,7 +31,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
+
+      - name: Test
+        run: npm run unit-test
+        working-directory: er-client
+
+      - name: Build
+        run: npm run build
+        working-directory: er-client
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
