--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -24,6 +24,10 @@ jobs:
       run: npm ci
       working-directory: er-client
 
+    - name: Build
+      run: npm run build
+      working-directory: er-client
+
     - name: Unit tests 
       run: npm run unit-test
       working-directory: er-client
